# nurbs-rs

./: Cargo.toml  README.md
resource/: log4rs.yaml  sample.urdf
src/: demo.rs  lib.rs  main.rs  robotics.rs  test.rs  urdf.rs
src/ccd/: helper.rs  mod.rs  mpr.rs  obb.rs  obb_tree.rs  object.rs  vector.rs
src/control/: mod.rs  pid.rs
src/geometry/: bbox.rs  bezier.rs  bspline.rs  dcel.rs  helper.rs  mod.rs  nurbs.rs  volint.rs
src/geometry/dcel/: dcel.rs  face.rs  half_edge.rs  halfedge.rs  mod.rs  vertex.rs
src/math/: decomp_cholesky.rs  matrix.rs  mod.rs  ode.rs  screw.rs  vector.rs
src/math/integration/: mod.rs  rk4.rs
src/robotics/: dynamics.rs  inertia.rs  joint.rs  joint_builder.rs  kinematics.rs  link.rs  mod.rs  range.rs  rbtree.rs  rigid_body.rs  rigid_body_tree.rs  robot.rs  robot_model.rs  robot_state.rs  sensor.rs  serial_link.rs  special_cholesky.rs
src/robotics/dynamics/: crba.rs  dynamics.rs  forward_dynamics.rs  inverse_dynamics.rs  mod.rs
src/robotics/joint/: free_joint.rs  joint.rs  mod.rs  revolute_joint.rs
src/robotics/rbtree/: display.rs  dynamics.rs  import.rs  kinematics.rs  mod.rs  property.rs
src/robotics/solver/: constraint.rs  dantzig_lcp_solver.rs  fast_ldlt.rs  lcp_solver.rs  mod.rs
src/robotics/tmp/: mod.rs  revolute_joint.rs
src/simulation/: mod.rs  sim_model.rs
src/test/: kiss3d_tests.rs
src/tests/: bspline.rs  ccd.rs  dcel.rs  dcel_test.rs  dynamics.rs  dynamics_test.rs  kinematics.rs  kinematics_test.rs  kiss3d_tests.rs  mod.rs  rbtree.rs  trajectory.rs  trajectory_test.rs
src/utils/: color.rs  common.rs  consts.rs  mod.rs  rotation.rs  stl.rs  trajectory.rs  urdf.rs
src/utils/rotation/: eul2rotm.rs  euler.rs  eulrate2omeg.rs  mod.rs  omeg2eulrate.rs  quaternion.rs  rotm2eul.rs
