[package]
name = "crobot"
version = "0.1.0"
authors = ["Yuechuan Xue <xueyuechuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "resource/header.html" ]

[dependencies]
kiss3d = "0.22"
alga = "0.9.2"
nalgebra = "0.19.0"
ncollide3d = "0.21"
petgraph = "0.5.0"
urdf-rs = "0.5.0"
failure = "0.1.6"
k = "0.16.0"
log = "0.4.8"
rouille = "3.0.0"
serde_derive = "1.0.104"
env_logger = "0.4.2"
# assimp = { version = "0.3.1", optional = true }
assimp = "0.3.1"
assimp-sys = "0.3.1"
structopt = "0.2.0"

[lib]
name = "crobot"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"