[package]
name = "crobot"
version = "0.1.0"
authors = ["Yuechuan Xue <xueyuechuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "resource/header.html" ]

[dependencies]
kiss3d = "0.22"
nalgebra = "0.19.0"
rand = "0.7.3"

[lib]
name = "crobot"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"