[package]
name = "crobot"
version = "0.1.0"
authors = ["Yuechuan Xue <xueyuechuan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "resource/header.html" ]

[dependencies]
kiss3d = "0.23"
nalgebra = "0.20.0"
rand = "0.7.3"
approx = "0.3.2"
urdf-rs = "0.5.0"
failure = "0.1"
petgraph = "0.5.0"
log4rs = "0.11.0"
log = "0.4.8"
prettytable-rs = "0.8.0"
byteorder = "1.3.4"

[lib]
name = "crobot"
path = "src/lib.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"